// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDerivedStateFromProps works #447 1`] = `
<div>
  <h2>
    One 3
  </h2>
</div>
`;

exports[`no double runs for getDerivedStateFromProps 1`] = `
<div>
  Test-content
</div>
`;

exports[`no warnings in modern react 1`] = `
<div>
  <div>
    42
     + 
    3
  </div>
</div>
`;

exports[`no warnings in modern react 2`] = `
<div>
  <div>
    42
     + 
    4
  </div>
</div>
`;
